# playground

./: .gitignore  ditto.toml  flake.nix  index.css  index.html  index.js  package-lock.json  package.json  postcss.config.js  rust-toolchain.toml  treefmt.toml  tsconfig.json  vite.config.ts
.github/workflows/: ci.yaml
assets/: ditto_web_bg-d51ea1b6.wasm  index-2e79e1ba.css  index-b07077f1.js
ditto-src/: Clipboard.ditto  Clipboard.js  Compiler.ditto  Compiler.js  Console.ditto  Console.js  Editor.ditto  Editor.js  Highlight.ditto  Highlight.js  Main.ditto  Main.js
ditto-web/: Cargo.toml
ditto-web/src/: lib.rs
lezer-ditto/: .gitignore  README.md  package.json  test.js
lezer-ditto/src/: ditto.grammar  highlight.js  index.js  parser.js  parser.terms.js
lezer-ditto/tests/: modules.txt
public/: CNAME  ditto_web_bg.wasm
src/: ditto.ts  main.ts
