[package]
name = "ditto-web"
version = "0.1.0"
edition = "2021"
license = "BSD-3-Clause"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"
miette = { version = "5.5", features = ["fancy"] }

ditto-cst = { git = "https://github.com/ditto-lang/ditto", rev = "0.0.4" }
ditto-checker = { git = "https://github.com/ditto-lang/ditto", rev = "0.0.4" }
ditto-fmt = { git = "https://github.com/ditto-lang/ditto", rev = "0.0.4" }
ditto-codegen-js = { git = "https://github.com/ditto-lang/ditto", rev = "0.0.4" }

# Not a direct dependency but we need to enable the `wasm-bindgen` feature.
#
# Sub-dependency features aren't supported: https://stackoverflow.com/a/65468297/17263155
egg = { version = "0.9", features = ["wasm-bindgen"] }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
wee_alloc = { version = "0.4.5", optional = true }

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
